--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-	"name": "application-name",
+	"name": "finalyearproject",
 	"version": "0.0.1",
+	"engines": {
+	      "node": "0.6.17"
+	    , "npm": "1.1.21"    
+		  }
+
 	"private": true,
 	"dependencies": {
 		"express": "2.5.8",
-		"jade": ">= 0.0.1"
+		"jade": ">= 0.0.1",
+		"dateformat": "*"
 		
 	}
 }
