--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
    "name":"finalyearproject",
    "version":"0.0.1",
    "engines":{
-      "node":"0.6.x",
-      "npm":"1.0.x"
+      "node":"*",
+      "npm":"*"
    },
    "private":true,
    "dependencies":{
