--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-   "name":"finalyearproject",
-   "version":"0.0.1",
-   "engines":{
-      "node":"*",
-      "npm":"*"
-   },
-   "private":true,
-   "dependencies":{
-      "express":"2.5.8",
-      "jade":">= 0.0.1",
-      "dateformat":"*"
-   }
+  "name": "finalyearproject",
+  "version": "0.0.1",
+  "private": true,
+  "dependencies": {
+    "express": "2.5.8",
+    "jade": "*",
+    "dateformat": "*",
+    "mysql": "0.9.x"
+  },
+  "engines": {
+    "node": "0.6.x",
+    "npm": "1.0.x"
+  },
+  "subdomain": "merlinserver",
+  "scripts": {
+    "start": "app.js"
+  }
 }
